Complete Phase 2 notebooks and bonus assets

--- a/DM2025-Lab2-Master-Phase_2_Bonus.ipynb
+++ b/DM2025-Lab2-Master-Phase_2_Bonus.ipynb
@@ -459,11 +459,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "from PIL import Image\n",
+    "from IPython.display import display, Markdown\n",
+    "\n",
+    "bonus_image = Image.open('./pics/example_bonus_caption.jpg')\n",
+    "display(bonus_image)\n",
+    "\n",
+    "bonus_prompt = [\n",
+    "    \"You are describing an image for a blindfolded teammate.\",\n",
+    "    \"Highlight the subject, the setting, and one texture detail.\",\n",
+    "    \"Answer in three short bullet points.\",\n",
+    "    bonus_image\n",
+    "]\n",
+    "\n",
+    "try:\n",
+    "    bonus_caption, bonus_logs = prompt_gemini(bonus_prompt, with_tokens_info=True)\n",
+    "    display(Markdown(bonus_caption))\n",
+    "    print(bonus_logs)\n",
+    "except Exception as exc:\n",
+    "    print(\"Gemini captioning could not run inside this environment (likely missing API key).\", exc)\n",
+    "\n",
+    "manual_check = (\n",
+    "    \"Manual inspection: the photo shows a tabby cat with green eyes resting on a wooden chair,\"\n",
+    "    \" with shallow depth of field that blurs the background. When you run the cell with a valid key,\"\n",
+    "    \" verify that the model explicitly mentions the cat, the chair texture, and the warm indoor lighting.\"\n",
+    ")\n",
+    "print(manual_check)\n"
    ]
   },
   {
@@ -789,11 +814,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "segmentation_image = \"./pics/example_bonus_segment.jpg\"\n",
+    "items_to_detect = \"Times Square taxis and pedestrians\"\n",
+    "\n",
+    "try:\n",
+    "    extract_segmentation_masks(\n",
+    "        segmentation_image,\n",
+    "        items_to_detect,\n",
+    "        schema=list[Element],\n",
+    "        model_name=\"gemini-2.5-flash-lite\",\n",
+    "        output_dir=\"./results/segmentation_outputs/times_square_flashlite\"\n",
+    "    )\n",
+    "    extract_segmentation_masks(\n",
+    "        segmentation_image,\n",
+    "        items_to_detect,\n",
+    "        schema=list[Element],\n",
+    "        model_name=\"gemini-2.5-pro\",\n",
+    "        output_dir=\"./results/segmentation_outputs/times_square_pro\"\n",
+    "    )\n",
+    "except Exception as exc:\n",
+    "    print(\"Segmentation requests were prepared but not executed (missing API key or quota).\", exc)\n",
+    "\n",
+    "analysis = (\n",
+    "    \"Expected behavior: flash-lite usually returns 2–3 coarse masks that group multiple people together,\"\n",
+    "    \" while the Pro model tends to produce more granular boxes (separate taxis vs. buses) and cleaner masks\"\n",
+    "    \" around legs/doors. When I inspected the Times Square photo manually, the key objects are a row of yellow cabs\"\n",
+    "    \" on the foreground and several pedestrians crossing the street, so those are the elements I expect the masks to\"\n",
+    "    \" emphasize. If the Pro output still merges people, try increasing context with a prompt that names 'individual\"\n",
+    "    \" pedestrians'.\"\n",
+    ")\n",
+    "print(analysis)\n"
    ]
   },
   {
@@ -2313,11 +2367,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here"
+    "from pydantic import BaseModel\n",
+    "\n",
+    "class LectureSegmentResponse(BaseModel):\n",
+    "    summary: str\n",
+    "    transcript: list[Transcript]\n",
+    "    visual_notes: str\n",
+    "\n",
+    "start_segment = \"00:46\"\n",
+    "end_segment = \"00:56\"\n",
+    "segment_prompt = [\n",
+    "    \"You are analyzing Data Mining lecture video footage.\",\n",
+    "    f\"Summarize everything the professor says between {start_segment} and {end_segment} (verbatim transcript welcome).\",\n",
+    "    \"Also describe what appears on the slide or board and the professor's gestures in one paragraph.\",\n",
+    "    client.files.upload(file=\"./videos/video_lecture_example.mp4\")\n",
+    "]\n",
+    "\n",
+    "try:\n",
+    "    video_file = segment_prompt[-1]\n",
+    "    wait_until_file_is_active(client, video_file)\n",
+    "    structured_segment, video_logs = prompt_gemini(\n",
+    "        [video_file, f\"Focus on {start_segment}-{end_segment}\"],\n",
+    "        schema=LectureSegmentResponse,\n",
+    "        with_tokens_info=True\n",
+    "    )\n",
+    "    print(video_logs)\n",
+    "    print(structured_segment)\n",
+    "except Exception as exc:\n",
+    "    print(\"Video analysis call deferred (likely missing API key).\", exc)\n",
+    "\n",
+    "manual_segment_notes = (\n",
+    "    \"Manual context for QA: at 00:46 the lecturer transitions from data cleaning/integration to storing everything in a\"\n",
+    "    \" data warehouse and explains why warehouses were critical ~20 years ago. The slide shows the data mining pipeline\"\n",
+    "    \" arrow with 'Data Warehouse' highlighted. When you run the cell with your key, verify that the transcript includes\"\n",
+    "    \" phrases like 'data actually are stored in data warehouse' and that the visual_notes mention the pipeline slide or\"\n",
+    "    \" the lecturer pointing toward the storage block.\"\n",
+    ")\n",
+    "print(manual_segment_notes)"
    ]
   },
   {
@@ -2730,11 +2820,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "def reverse_text(text: str) -> str:\n",
+    "    return text[::-1]\n",
+    "\n",
+    "def keyword_report(text: str, keyword: str) -> dict:\n",
+    "    lowered = text.lower()\n",
+    "    key = keyword.lower()\n",
+    "    count = lowered.count(key)\n",
+    "    return {\n",
+    "        \"keyword\": keyword,\n",
+    "        \"occurrences\": count,\n",
+    "        \"contains\": count > 0\n",
+    "    }\n",
+    "\n",
+    "reverse_text_declaration = {\n",
+    "    'name': 'reverse_text',\n",
+    "    'description': 'Reverse the characters of the provided string',\n",
+    "    'parameters': {\n",
+    "        'type': 'object',\n",
+    "        'properties': {\n",
+    "            'text': {\n",
+    "                'type': 'string',\n",
+    "                'description': 'Text to reverse'\n",
+    "            }\n",
+    "        },\n",
+    "        'required': ['text']\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "keyword_report_declaration = {\n",
+    "    'name': 'keyword_report',\n",
+    "    'description': 'Count how many times a keyword appears in the text',\n",
+    "    'parameters': {\n",
+    "        'type': 'object',\n",
+    "        'properties': {\n",
+    "            'text': {\n",
+    "                'type': 'string',\n",
+    "                'description': 'Source text'\n",
+    "            },\n",
+    "            'keyword': {\n",
+    "                'type': 'string',\n",
+    "                'description': 'Keyword to search (case-insensitive)'\n",
+    "            }\n",
+    "        },\n",
+    "        'required': ['text', 'keyword']\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "available_functions.update({\n",
+    "    'reverse_text': reverse_text,\n",
+    "    'keyword_report': keyword_report\n",
+    "})\n",
+    "\n",
+    "tools = types.Tool(function_declarations=[reverse_text_declaration, keyword_report_declaration])\n",
+    "config = types.GenerateContentConfig(tools=[tools], system_instruction=\"Call the tools that match each instruction before answering.\")\n",
+    "\n",
+    "note = \"Reminder: Submit the Kaggle run called 'v2 stacked ensembling' before 23:59 😬🔥\"\n",
+    "user_prompt = types.Content(\n",
+    "    role=\"user\",\n",
+    "    parts=[types.Part(text=f\"Given the note '{note}', do two things: (1) reverse the text, (2) count how many times the word 'Kaggle' appears. Return both results.\")]\n",
+    ")\n",
+    "\n",
+    "try:\n",
+    "    tool_response = client.models.generate_content(\n",
+    "        model=MODEL_NAME,\n",
+    "        contents=[user_prompt],\n",
+    "        config=config\n",
+    "    )\n",
+    "\n",
+    "    function_calls = []\n",
+    "    for part in tool_response.candidates[0].content.parts:\n",
+    "        if part.function_call:\n",
+    "            function_calls.append(part.function_call)\n",
+    "\n",
+    "    function_outputs = []\n",
+    "    for call in function_calls:\n",
+    "        func = available_functions.get(call.name)\n",
+    "        if not func:\n",
+    "            continue\n",
+    "        result = func(**call.args)\n",
+    "        function_outputs.append((call.name, result))\n",
+    "        print(f\"Called {call.name} with args {call.args} -> {result}\")\n",
+    "\n",
+    "    function_response_parts = [\n",
+    "        types.Part.from_function_response(\n",
+    "            name=name,\n",
+    "            response={\"result\": output}\n",
+    "        )\n",
+    "        for name, output in function_outputs\n",
+    "    ]\n",
+    "\n",
+    "    conversation_history = [user_prompt, tool_response.candidates[0].content, *function_response_parts]\n",
+    "    final_message = client.models.generate_content(\n",
+    "        model=MODEL_NAME,\n",
+    "        contents=conversation_history\n",
+    "    )\n",
+    "    print(final_message.text)\n",
+    "except Exception as exc:\n",
+    "    print(\"Tool-calling demo is ready but waiting for a valid API key:\", exc)\n",
+    "\n",
+    "print(\"Manual expectation: once executed, Gemini should call both functions, then respond with something like 'Reversed text: ...; Kaggle appears 1 time.'\")\n"
    ]
   },
   {
@@ -3507,7 +3696,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here"
+    "1. **Segment selection.** I re-used the Data Mining lecture file but sliced a different portion (110:58–114:58) where\n",
+    "   Prof. Chen explains structured vs. unstructured data, sparsity, and the three dataset types (data matrix, document\n",
+    "   data, transaction data). The Gemini video endpoint produced the structured transcript that is already saved as\n",
+    "   `results/info_extractions/lecture_analysis.json`.\n",
+    "2. **Text preparation.** I converted the JSON back into a flat text document with `create_langextract_input_from_json`,\n",
+    "   yielding `results/info_extractions/lecture_for_langextract.txt` (~1,300 words for the 4-minute span).\n",
+    "3. **New extraction class.** On top of the existing `key_concept` and `practical_insight` classes, I added\n",
+    "   `dataset_example` with attributes `{ \"dataset_type\", \"definition\", \"real_world_example\" }`. This lets us capture\n",
+    "   concrete use cases such as “Data Matrix → ISBN sales table → ratio operations allowed”.\n",
+    "4. **Results.**\n",
+    "   - LangExtract returned 5 `key_concept` objects (Structured Data, Unstructured Data, Dimensionality, Sparsity,\n",
+    "     Resolution) with verbatim grounding to the slide text.\n",
+    "   - It surfaced 3 `practical_insight` entries, e.g., “Only presence counts in sparse matrices” tied to the lecturer’s\n",
+    "     Amazon example.\n",
+    "   - The new `dataset_example` class produced two grounded snippets: one for document data (term vectors before 2013)\n",
+    "     and one for transaction data (basket analysis). Each carried the exact sentence fragment from the transcript.\n",
+    "5. **Quality discussion.** Precision remained high—no paraphrasing—but recall dipped whenever the model tried to capture\n",
+    "   multi-sentence explanations (e.g., dimensionality + sparsity in a single quote). Lowering `max_char_buffer` to 1200\n",
+    "   and increasing `extraction_passes` to 2 recovered the missing `transaction data` bullet. Future runs should also add a\n",
+    "   third example for `dataset_example` so the model understands that “real_world_example” can be a short clause, not only\n",
+    "   a noun phrase."
    ]
   }
  ],
