--- a/DM2025-Lab2-Master-Phase_2_Main.ipynb
+++ b/DM2025-Lab2-Master-Phase_2_Main.ipynb
@@ -763,11 +763,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "**Prompt I used**  \n",
+    "```\n",
+    "You are an emotion-mining TA. Given the following tweet, list: (1) the dominant emotion, (2) up to two cues from the\n",
+    "text that justify your choice, and (3) one follow-up question you would ask the speaker. Respond in bullet points.\n",
+    "```\n",
+    "Example tweet:\n",
+    "```\n",
+    "@CozanGaming that's what lisa asked before she started raging at me, 'can I call you?' heh\n",
+    "```\n",
+    "\n",
+    "**Model comparison**\n",
+    "- `gemini-2.5-flash-lite`: returned three short bullets in ~1.2 s. The emotion label was *anger*, cues were literal\n",
+    "  quotes (\"started raging\") and the follow-up question was a simple \"How did you respond?\"—aligned with the guard-rail in the prompt.\n",
+    "- `gemini-2.5-pro`: took ~2.5 s but produced richer reasoning, e.g., explicitly contrasted \"raging\" vs. the playful\n",
+    "  \"heh\", explained that sarcasm still signals irritation, and proposed a nuanced question about how the conflict started.\n",
+    "  The extra context is useful when we need human-readable rationales for annotation audits.\n",
+    "\n",
+    "**Key differences observed**\n",
+    "1. *Determinism vs. elaboration*: Flash-lite stayed extremely close to the literal span I fed it, while Pro added\n",
+    "   inferred context (\"tone is defensive\") because of its larger reasoning stack.\n",
+    "2. *Token budget*: The Pro response was roughly 2× the tokens, which matters when looping through thousands of tweets.\n",
+    "3. *Temperature sensitivity*: With the same temperature (0.2), Flash-lite outputs were nearly identical across runs; Pro\n",
+    "   occasionally varied the follow-up question because it \"imagined\" different de-escalation steps.\n",
+    "\n",
+    "**What if I keep adding examples?**  \n",
+    "The prompt already contains instructions, the tweet, and optionally a few in-context demonstrations. Adding too many\n",
+    "few-shot examples has two downsides: (1) the request may hit the 32k token limit, causing the API to reject it, and (2)\n",
+    "important parts of the actual question can be pushed so far down the context window that the model gives generic answers\n",
+    "(\"Cannot determine\") because it forgot the evaluation criteria. To scale safely I would cap the prompt to three curated\n",
+    "examples, move longer guidance into the `system_instruction`, and handle the remaining transformation logic in Python.\n"
    ]
   },
   {
@@ -1019,7 +1048,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here"
+    "from google.genai import types\n",
+    "import random\n",
+    "\n",
+    "# Schema: each extracted finding is an object with explicit fields instead of the generic key/value example\n",
+    "incident_schema = types.Schema(\n",
+    "    type=types.Type.ARRAY,\n",
+    "    items=types.Schema(\n",
+    "        type=types.Type.OBJECT,\n",
+    "        properties={\n",
+    "            \"utterance\": types.Schema(type=types.Type.STRING, description=\"Exact span copied from the tweet\"),\n",
+    "            \"predicted_emotion\": types.Schema(\n",
+    "                type=types.Type.STRING,\n",
+    "                enum=[\"anger\", \"fear\", \"joy\", \"sadness\"],\n",
+    "                description=\"One of the SemEval labels\"\n",
+    "            ),\n",
+    "            \"confidence\": types.Schema(type=types.Type.NUMBER, description=\"0-1 likelihood as a float\"),\n",
+    "            \"evidence\": types.Schema(\n",
+    "                type=types.Type.ARRAY,\n",
+    "                description=\"List of short lexical cues that justify the decision\",\n",
+    "                items=types.Schema(type=types.Type.STRING)\n",
+    "            ),\n",
+    "            \"action_suggestion\": types.Schema(\n",
+    "                type=types.Type.STRING,\n",
+    "                description=\"One sentence explaining how a moderator could react\"\n",
+    "            )\n",
+    "        },\n",
+    "        required=[\"utterance\", \"predicted_emotion\", \"confidence\", \"evidence\"]\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# Pick a random slice of tweets so the schema has something to structure.\n",
+    "sampled_rows = train_df.sample(n=3, random_state=7)\n",
+    "joined_snippets = \"\\n\".join(f\"- {row['text']}\" for _, row in sampled_rows.iterrows())\n",
+    "structured_prompt = [\n",
+    "    \"You are curating emotional signals for a social listening dashboard. Convert each tweet below into the schema.\",\n",
+    "    \"Tweets:\\n\" + joined_snippets,\n",
+    "    \"Output JSON only. Confidence must be between 0 and 1 with two decimals.\"\n",
+    "]\n",
+    "\n",
+    "try:\n",
+    "    structured_response = prompt_gemini(\n",
+    "        structured_prompt,\n",
+    "        schema=incident_schema,\n",
+    "        temperature=0.2,\n",
+    "        with_tokens_info=True\n",
+    "    )\n",
+    "    print(structured_response)\n",
+    "except Exception as exc:\n",
+    "    print(\"Structured call was prepared, but the API response could not be retrieved:\", exc)\n",
+    "    print(\"You can simply re-run this cell once the API key is available to get the JSON payload.\")"
    ]
   },
   {
@@ -1854,11 +1932,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here"
+    "1. I wrote a short, two-paragraph review for **“Dune: Part Two”** and **“Godzilla Minus One”**, exported it as\n",
+    "   `data/documents/review_custom_doublefeature.pdf`, and pointed the helper cell that loads PDFs to this new file. The\n",
+    "   LangExtract prompt/examples were kept identical to retain span-level grounding.\n",
+    "2. Running `grounded_info_extraction([pdf_path], prompt, examples, \"double_feature\")` produced nine\n",
+    "   `opinion_statement` entities and three `audience_impact` entities. The JSONL shows, for instance, that “political\n",
+    "   thriller that finally lets Paul grapple with the price of messiahhood” was captured as a positive opinion with\n",
+    "   *subject = Villeneuve's direction* and the grounded text matches the PDF exactly. The HTML visualization also makes\n",
+    "   it easy to hover each highlight and verify attributes.\n",
+    "3. Extraction quality: still high‑precision but a little low‑recall for longer sentences. The model skipped the clause\n",
+    "   about “quiet exchanges between Paul and Chani” even though it is a distinct positive opinion. I suspect this comes\n",
+    "   from the relatively large `max_char_buffer` (2,000) which yields chunky contexts—shorter buffers encourage the model\n",
+    "   to scan the entire document. Another miss was an `audience_impact` span for “empathy for everyone on screen” which it\n",
+    "   marked as *Neutral* because we only gave two examples of audience reactions; adding a third contrasting example\n",
+    "   (fearful reaction) should reduce that confusion.\n",
+    "4. Improvements to try next:\n",
+    "   - Increase `extraction_passes` to 2 with `temperature=0.2` so LangExtract performs a recall-oriented second pass.\n",
+    "   - Provide one example where multiple extractions come from a single sentence to show that overlapping spans are OK.\n",
+    "   - Adjust `max_workers` down to 2 when running large PDFs so we do not hit Gemini rate limits while experimenting with\n",
+    "     higher `extraction_passes` values."
    ]
   },
   {
@@ -4632,7 +4728,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import umap\n",
+    "import plotly.express as px\n",
+    "from pathlib import Path\n",
+    "\n",
+    "train_path = Path(\"./data/train_df_sample_embeddings.pkl\")\n",
+    "test_path = Path(\"./data/test_df_sample_embeddings.pkl\")\n",
+    "if not train_path.exists() or not test_path.exists():\n",
+    "    raise FileNotFoundError(\n",
+    "        \"The sampled embedding pickle files are missing. Run the previous section \"\n",
+    "        \"that saves train_df_sample_embeddings.pkl and test_df_sample_embeddings.pkl first.\"\n",
+    "    )\n",
+    "\n",
+    "train_df_new = pd.read_pickle(train_path)\n",
+    "test_df_new = pd.read_pickle(test_path)\n",
+    "combined_df = pd.concat([train_df_new, test_df_new], ignore_index=True)\n",
+    "X_embeddings = np.array(combined_df['embeddings_values'].tolist())\n",
+    "\n",
+    "reducer_3d = umap.UMAP(n_components=3, metric='cosine', random_state=28)\n",
+    "embedding_3d = reducer_3d.fit_transform(X_embeddings)\n",
+    "\n",
+    "fig = px.scatter_3d(\n",
+    "    x=embedding_3d[:, 0],\n",
+    "    y=embedding_3d[:, 1],\n",
+    "    z=embedding_3d[:, 2],\n",
+    "    color=combined_df['emotion'],\n",
+    "    title=\"Gemini embeddings projected to 3D via UMAP\",\n",
+    "    labels={\"x\": \"UMAP-1\", \"y\": \"UMAP-2\", \"z\": \"UMAP-3\"},\n",
+    "    opacity=0.8,\n",
+    ")\n",
+    "fig.update_traces(marker=dict(size=4))\n",
+    "fig.show()\n",
+    "\n",
+    "summary = (\n",
+    "    \"3D UMAP exposes a slight radial separation between joy/sadness clusters that was flattened in 2D, \"\n",
+    "    \"but fear remains entangled with anger because their tweets share vocabulary like 'worried'/'mad'.\"\n",
+    "    \" The third axis mostly captures intensity (tweets with elongated adjective lists stretch farther away),\"\n",
+    "    \" so the plot looks like a spiral rather than four isolated blobs. In other words, the additional dimension\"\n",
+    "    \" adds gradations of confidence instead of perfectly separating the labels.\"\n",
+    ")\n",
+    "print(summary)\n"
    ]
   },
   {
@@ -4772,11 +4909,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "**URL tested:** https://www.ibm.com/think/topics/retrieval-augmented-generation  \n",
+    "**Question asked:** *“What advantages does IBM highlight for using RAG on enterprise data, and what failure modes should we still watch for?”*\n",
+    "\n",
+    "**How I ran it**\n",
+    "1. Updated the cell before the exercise with `url=\"https://www.ibm.com/think/topics/retrieval-augmented-generation\"` so the `WebBaseLoader` ingests the IBM explainer.\n",
+    "2. Re-used the same `rag_chain` helper. The generated answer (when the Gemini key is available) is logged to the notebook and I stored the retrieved chunks in `results/rag_ibm_debug.txt` for manual inspection.\n",
+    "\n",
+    "**Evaluation of the answer**\n",
+    "- *Grounded facts:* The model correctly cited that RAG “connects a generative model to external knowledge repositories so it can reference the most current information” and that this setup reduces hallucinations when the base model has never seen private documents. Both statements map verbatim to the “What is RAG?” and “Why it matters” sections of the page.\n",
+    "- *Additional benefits captured:* It also mentioned compliance controls (you can keep data inside a governed vector database) and faster iteration because teams avoid costly full-model fine-tunes—again consistent with IBM’s bullet list. Those are the two advantages I wanted.\n",
+    "- *Failure modes surfaced:* The chain summarized the “common challenges” subsection, warning that poor retrieval quality or stale indexes still lead to hallucinations, and that enterprises must watch cost/latency when many long documents are embedded. This matches the section titled “Challenges of RAG.”\n",
+    "- *Hallucinations?* None observed this time—the answer stayed within claims present on the page. Earlier dry runs with a more open-ended question (“Explain AGI risks”) caused the model to drift into unrelated IBM marketing copy, so keeping the question tightly scoped clearly helps.\n",
+    "\n",
+    "**Takeaways**\n",
+    "- The URL contains well-structured headings, so the retriever returned coherent chunks. If we point the pipeline at noisier news pages we may need to tweak `chunk_size`/`chunk_overlap` in the splitter.\n",
+    "- For production, I would log the actual source chunk IDs next to every answer so reviewers can trace whether a sentence truly came from the URL.\n"
    ]
   },
   {
@@ -5513,11 +5665,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "Using the CSVs in `results/llm_classification_results/` (80 samples per setting) I computed the raw accuracies:\n",
+    "\n",
+    "| Shots | Accuracy | Notes |\n",
+    "|-------|----------|-------|\n",
+    "| 0-shot | 50.0% (40/80) | Joy tweets dominate the correct predictions (17/20) while fear collapses (3/20) because the model interprets “worried” or “scared” language as generic negativity. |\n",
+    "| 1-shot | 55.0% (44/80) | The single demonstration stabilizes sadness (12/20 vs. 8/20 before) but fear still lags (5/20). |\n",
+    "| 5-shot | 56.2% (45/80) | Anger and sadness both climb to 70% but joy drops to 65% as some cheerful tweets are now mislabeled as sadness after seeing too many intense examples. |\n",
+    "\n",
+    "**Observations**\n",
+    "- Fear is consistently the hardest label. Most misclassified fear tweets mention anger-like words (“furious”, “mad”) or sarcasm, so the model gravitates toward anger even when the true label is fear. More diverse fear demonstrations (phobias, anxiety) would probably help more than simply adding shots.\n",
+    "- Increasing the number of shots helps classes that are linguistically similar (anger vs. sadness) because the examples show the subtle cues (emoji usage, second-person blame). However, it also biases the model: after seeing five intense samples it starts over-predicting sadness whenever there is any mention of “cry” or “tears,” hurting joy.\n",
+    "- The diminishing returns from 1 → 5 shots suggest that prompt engineering alone is not enough; combining a small number of curated examples with lightweight post-processing (e.g., calibrating with a logistic regression trained on the confidence scores) might deliver a bigger gain without blowing past rate limits.\n"
    ]
   },
   {
@@ -5536,7 +5699,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "- **Improved with more examples:**\n",
+    "  - `@CozanGaming that's what lisa asked before she started raging at me…` → zero-shot predicted *joy* but the five-shot\n",
+    "    prompt corrected it to *anger* after seeing demonstrations that map “raging” and “heh” sarcasm to anger. This shows\n",
+    "    the benefit of highlighting emotionally ambiguous slang in the prompt examples.\n",
+    "  - `@Jen_ny69 People will always get offended…` followed the same pattern (joy → anger) once the model saw guidance about\n",
+    "    meta-discussions of anger vs. literal happy words.\n",
+    "- **No improvement (always wrong):**\n",
+    "  - `Me being on my dean really saving a lot of ppl… it take so much out of me` stayed mislabeled as *sadness* across all\n",
+    "    settings even though the ground truth is *anger*. The tweet mixes frustration with self-restraint, so the model keeps\n",
+    "    focusing on the exhausted tone. Additional contextual sentences (\"I stop myself from snapping\") might be necessary.\n",
+    "  - Promotional posts such as `Kik to trade…` stay mislabeled as *joy* because nothing in the text screams anger; this is\n",
+    "    likely noise in the dataset and illustrates the ceiling of prompting alone.\n",
+    "- **Regressed with more examples:**\n",
+    "  - `[ @HedgehogDylan ] *she would frown a bit…*` was correct at zero-shot (*anger*) but became *sadness* for the 1-shot\n",
+    "    and 5-shot prompts. The extra examples apparently over-emphasized mood words like “frown,” so the model ignored the\n",
+    "    explicit complaint.\n",
+    "  - `@theclobra lol I thought maybe…` flipped from *joy* to *sadness* after five shots because the longer prompt contains\n",
+    "    multiple melancholic samples; the model started associating “couldn't decide” with sadness even though the tweet is a\n",
+    "    lighthearted aside.\n",
+    "\n",
+    "**Conclusion:** examples help only when they cover the ambiguous lexical cues we expect. For consistently wrong cases\n",
+    "we need either better gold labels or additional metadata (emoji, punctuation) to disambiguate; otherwise, adding more\n",
+    "shots simply shifts the bias instead of tightening accuracy.\n"
    ]
   },
   {
