Remove double-asterisk formatting from Phase 2 main notebook

--- a/DM2025-Lab2-Master-Phase_2_Main.ipynb
+++ b/DM2025-Lab2-Master-Phase_2_Main.ipynb
@@ -767,7 +767,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "**Prompt I used**  \n",
+    "Prompt I used  \n",
     "```\n",
     "You are an emotion-mining TA. Given the following tweet, list: (1) the dominant emotion, (2) up to two cues from the\n",
     "text that justify your choice, and (3) one follow-up question you would ask the speaker. Respond in bullet points.\n",
@@ -777,21 +777,21 @@
     "@CozanGaming that's what lisa asked before she started raging at me, 'can I call you?' heh\n",
     "```\n",
     "\n",
-    "**Model comparison**\n",
+    "Model comparison\n",
     "- `gemini-2.5-flash-lite`: returned three short bullets in ~1.2 s. The emotion label was *anger*, cues were literal\n",
     "  quotes (\"started raging\") and the follow-up question was a simple \"How did you respond?\"—aligned with the guard-rail in the prompt.\n",
     "- `gemini-2.5-pro`: took ~2.5 s but produced richer reasoning, e.g., explicitly contrasted \"raging\" vs. the playful\n",
     "  \"heh\", explained that sarcasm still signals irritation, and proposed a nuanced question about how the conflict started.\n",
     "  The extra context is useful when we need human-readable rationales for annotation audits.\n",
     "\n",
-    "**Key differences observed**\n",
+    "Key differences observed\n",
     "1. *Determinism vs. elaboration*: Flash-lite stayed extremely close to the literal span I fed it, while Pro added\n",
     "   inferred context (\"tone is defensive\") because of its larger reasoning stack.\n",
     "2. *Token budget*: The Pro response was roughly 2× the tokens, which matters when looping through thousands of tweets.\n",
     "3. *Temperature sensitivity*: With the same temperature (0.2), Flash-lite outputs were nearly identical across runs; Pro\n",
     "   occasionally varied the follow-up question because it \"imagined\" different de-escalation steps.\n",
     "\n",
-    "**What if I keep adding examples?**  \n",
+    "What if I keep adding examples?  \n",
     "The prompt already contains instructions, the tweet, and optionally a few in-context demonstrations. Adding too many\n",
     "few-shot examples has two downsides: (1) the request may hit the 32k token limit, causing the API to reject it, and (2)\n",
     "important parts of the actual question can be pushed so far down the context window that the model gives generic answers\n",
@@ -4913,20 +4913,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "**URL tested:** https://www.ibm.com/think/topics/retrieval-augmented-generation  \n",
-    "**Question asked:** *“What advantages does IBM highlight for using RAG on enterprise data, and what failure modes should we still watch for?”*\n",
+    "URL tested: https://www.ibm.com/think/topics/retrieval-augmented-generation  \n",
+    "Question asked: *“What advantages does IBM highlight for using RAG on enterprise data, and what failure modes should we still watch for?”*\n",
     "\n",
-    "**How I ran it**\n",
+    "How I ran it\n",
     "1. Updated the cell before the exercise with `url=\"https://www.ibm.com/think/topics/retrieval-augmented-generation\"` so the `WebBaseLoader` ingests the IBM explainer.\n",
     "2. Re-used the same `rag_chain` helper. The generated answer (when the Gemini key is available) is logged to the notebook and I stored the retrieved chunks in `results/rag_ibm_debug.txt` for manual inspection.\n",
     "\n",
-    "**Evaluation of the answer**\n",
+    "Evaluation of the answer\n",
     "- *Grounded facts:* The model correctly cited that RAG “connects a generative model to external knowledge repositories so it can reference the most current information” and that this setup reduces hallucinations when the base model has never seen private documents. Both statements map verbatim to the “What is RAG?” and “Why it matters” sections of the page.\n",
     "- *Additional benefits captured:* It also mentioned compliance controls (you can keep data inside a governed vector database) and faster iteration because teams avoid costly full-model fine-tunes—again consistent with IBM’s bullet list. Those are the two advantages I wanted.\n",
     "- *Failure modes surfaced:* The chain summarized the “common challenges” subsection, warning that poor retrieval quality or stale indexes still lead to hallucinations, and that enterprises must watch cost/latency when many long documents are embedded. This matches the section titled “Challenges of RAG.”\n",
     "- *Hallucinations?* None observed this time—the answer stayed within claims present on the page. Earlier dry runs with a more open-ended question (“Explain AGI risks”) caused the model to drift into unrelated IBM marketing copy, so keeping the question tightly scoped clearly helps.\n",
     "\n",
-    "**Takeaways**\n",
+    "Takeaways\n",
     "- The URL contains well-structured headings, so the retriever returned coherent chunks. If we point the pipeline at noisier news pages we may need to tweak `chunk_size`/`chunk_overlap` in the splitter.\n",
     "- For production, I would log the actual source chunk IDs next to every answer so reviewers can trace whether a sentence truly came from the URL.\n"
    ]
@@ -5677,7 +5677,7 @@
     "| 1-shot | 55.0% (44/80) | The single demonstration stabilizes sadness (12/20 vs. 8/20 before) but fear still lags (5/20). |\n",
     "| 5-shot | 56.2% (45/80) | Anger and sadness both climb to 70% but joy drops to 65% as some cheerful tweets are now mislabeled as sadness after seeing too many intense examples. |\n",
     "\n",
-    "**Observations**\n",
+    "Observations\n",
     "- Fear is consistently the hardest label. Most misclassified fear tweets mention anger-like words (“furious”, “mad”) or sarcasm, so the model gravitates toward anger even when the true label is fear. More diverse fear demonstrations (phobias, anxiety) would probably help more than simply adding shots.\n",
     "- Increasing the number of shots helps classes that are linguistically similar (anger vs. sadness) because the examples show the subtle cues (emoji usage, second-person blame). However, it also biases the model: after seeing five intense samples it starts over-predicting sadness whenever there is any mention of “cry” or “tears,” hurting joy.\n",
     "- The diminishing returns from 1 → 5 shots suggest that prompt engineering alone is not enough; combining a small number of curated examples with lightweight post-processing (e.g., calibrating with a logistic regression trained on the confidence scores) might deliver a bigger gain without blowing past rate limits.\n"
@@ -5699,19 +5699,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "- **Improved with more examples:**\n",
+    "- Improved with more examples:\n",
     "  - `@CozanGaming that's what lisa asked before she started raging at me…` → zero-shot predicted *joy* but the five-shot\n",
     "    prompt corrected it to *anger* after seeing demonstrations that map “raging” and “heh” sarcasm to anger. This shows\n",
     "    the benefit of highlighting emotionally ambiguous slang in the prompt examples.\n",
     "  - `@Jen_ny69 People will always get offended…` followed the same pattern (joy → anger) once the model saw guidance about\n",
     "    meta-discussions of anger vs. literal happy words.\n",
-    "- **No improvement (always wrong):**\n",
+    "- No improvement (always wrong):\n",
     "  - `Me being on my dean really saving a lot of ppl… it take so much out of me` stayed mislabeled as *sadness* across all\n",
     "    settings even though the ground truth is *anger*. The tweet mixes frustration with self-restraint, so the model keeps\n",
     "    focusing on the exhausted tone. Additional contextual sentences (\"I stop myself from snapping\") might be necessary.\n",
     "  - Promotional posts such as `Kik to trade…` stay mislabeled as *joy* because nothing in the text screams anger; this is\n",
     "    likely noise in the dataset and illustrates the ceiling of prompting alone.\n",
-    "- **Regressed with more examples:**\n",
+    "- Regressed with more examples:\n",
     "  - `[ @HedgehogDylan ] *she would frown a bit…*` was correct at zero-shot (*anger*) but became *sadness* for the 1-shot\n",
     "    and 5-shot prompts. The extra examples apparently over-emphasized mood words like “frown,” so the model ignored the\n",
     "    explicit complaint.\n",
@@ -5719,7 +5719,7 @@
     "    multiple melancholic samples; the model started associating “couldn't decide” with sadness even though the tweet is a\n",
     "    lighthearted aside.\n",
     "\n",
-    "**Conclusion:** examples help only when they cover the ambiguous lexical cues we expect. For consistently wrong cases\n",
+    "Conclusion: examples help only when they cover the ambiguous lexical cues we expect. For consistently wrong cases\n",
     "we need either better gold labels or additional metadata (emoji, punctuation) to disambiguate; otherwise, adding more\n",
     "shots simply shifts the bias instead of tightening accuracy.\n"
    ]
